--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   "dependencies": {
     "jquery": "^3.2.1",
     "lunr": "^2.1.4",
-    "moment": "^2.19.1"
+    "moment": "^2.22.2"
+  },
+  "devDependencies": {
+    "gulp-cli": "^2.0.1"
   }
 }
