Updates node dependency to quell security vulnerability alert.

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gulp-cli": "^2.0.1",
     "gulp-concat": "^2.6.1",
     "gulp-insert": "^0.5.0",
-    "gulp-uglify-es": "^1.0.4"
+    "gulp-uglify-es": "^1.0.4",
+    "extend": "^3.0.2"
   }
 }
